<resources>
    <string name="app_name">CharterConnect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_events_main">Events</string>
    <string name="title_activity_events_calandar">Events Calandar</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_resource_category">ResourceCategory</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_add_resource">Add Resource</string>
    <string name="title_activity_reserve_rsvp">Reserve RSVP</string>
    <string name="title_activity_school_profile">School Profile</string>
    <string name="title_activity_view_event">View Event</string>
    <string name="title_activity_view_resource">View Resource</string>
    <string name="title_activity_resource_main">Resources</string>
    <string name="title_activity_start_page">startPage</string>
    <string name="title_activity_start_screen">CharterConnect</string>

    <string name="scienceButton">Science</string>
    <string name="makerButton">Maker</string>
    <string name="artButton">Art</string>
    <string name="booksButton">Books</string>
    <string name="events">Events</string>
    <string name="resources">Resources</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="host_school">Host School</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_cost">Event Cost</string>
    <string name="grade_levels">Grade Levels</string>
    <string name="spaces_available">Spaces Available</string>
    <string name="rsvp_email">RSVP Email Address</string>
    <string name="rsvp_phone_number">RSVP Phone Number</string>
    <string name="save">Save</string>
    <string name="add_resource">Add Resource</string>
    <string name="category">Category</string>
    <string name="name_of_resource">Name of Resource/Set</string>
    <string name="number_of_units">Number of Units</string>
    <string name="date_available">Date Available</string>
    <string name="contact_email">Contact Email</string>
    <string name="description">Description</string>
    <string name="chooseCategory">Choose a Category</string>

    <array name="resource_types">
        <item>Choose a Category</item>
        <item>Books</item>
        <item>Art</item>
        <item>Maker</item>
        <item>Science</item>
    </array>

</resources>

    <!--<?xml version="1.0" encoding="utf-8"?>--><!--<shape--><!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:shape="oval">--><!--<corners--><!--android:radius="integer"--><!--android:topLeftRadius="integer"--><!--android:topRightRadius="integer"--><!--android:bottomLeftRadius="integer"--><!--android:bottomRightRadius="integer" />--><!--<gradient--><!--android:angle="integer"--><!--android:centerX="integer"--><!--android:centerY="integer"--><!--android:centerColor="integer"--><!--android:endColor="color"--><!--android:gradientRadius="integer"--><!--android:startColor="color"--><!--android:type=["linear" | "radial" | "sweep"]--><!--android:useLevel=["true" | "false"] />--><!--<padding--><!--android:left="integer"--><!--android:top="integer"--><!--android:right="integer"--><!--android:bottom="integer" />--><!--<size--><!--android:width="integer"--><!--android:height="integer" />--><!--<solid--><!--android:color="color" />--><!--<stroke--><!--android:width="integer"--><!--android:color="color"--><!--android:dashWidth="integer"--><!--android:dashGap="integer" />--><!--</shape>-->
