<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.delia_grimes.charterconnect.ResourceMain"
    tools:showIn="@layout/activity_resource_main">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2"
        android:id="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp">

        <Button
            android:text="@string/scienceButton"
            android:id="@+id/scienceButton"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/pinkColor" />

        <Button
            android:text="@string/makerButton"
            android:id="@+id/makerButton"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:background="@color/pinkColor" />



        <Button
            android:text="@string/artButton"
            android:id="@+id/artButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:background="@color/pinkColor" />

        <Button
            android:text="@string/booksButton"
            android:id="@+id/booksButton"
            android:onClick="switchToCategory"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:background="@color/pinkColor"
            android:layout_marginTop="10dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:id="@+id/textView"
            android:layout_row="3" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="Events"
            android:id="@+id/eventsButton"
            android:onClick="switchToEvents"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="left"
            android:background="@android:color/holo_green_light" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="Resources"
            android:id="@+id/resourcesButton"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginBottom="80dp"
            android:layout_gravity="right"
            android:background="@android:color/holo_green_dark"
            android:singleLine="false" />



    </GridLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="Add Resource"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:onClick="addResource"
        android:background="@android:color/holo_green_light" />

</RelativeLayout>
