<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.delia_grimes.charterconnect.EventsMain"
    tools:showIn="@layout/activity_events_main">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:rowCount="1"
        android:columnCount="2"
        android:id="@+id/gridLayout"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp">


        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/events"
            android:id="@+id/eventsButton"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="left"
            android:background="@android:color/holo_green_dark" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/resources"
            android:id="@+id/resourcesButton"
            android:onClick="switchToResource"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="right"
            android:background="@android:color/holo_green_light"
            android:singleLine="false" />

    </GridLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/add_event"
        android:id="@+id/addEvent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:onClick="addEvent"
        android:background="@android:color/holo_green_light" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_above="@+id/addEvent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/gridLayout" />


</RelativeLayout>
